--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,15 @@ if (MSVC)
         "D:/VulkanSDK/1.3.236.0/Lib"
     )
 else()
+    if (APPLE)
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework Cocoa -framework IOKit")
+        include_directories(
+            "/usr/local/include"
+        )
+        link_directories(
+            "/usr/local/lib"
+        )
+    endif()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
     add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
@@ -37,5 +46,9 @@ link_directories(
 foreach(src IN LISTS srcs)
     get_filename_component(srcname ${src} NAME_WE)
     add_executable(${srcname} ${src})
-    target_link_libraries(${srcname} vulkan-1 glfw3 glm::glm)
+    if (MSVC)
+        target_link_libraries(${srcname} vulkan-1 glfw3 glm::glm)
+    else()
+        target_link_libraries(${srcname} vulkan glfw3 glm::glm)
+    endif()
 endforeach()
